@@ -1,6 +1,7 @@
 package com.faforever.neroxis.mask;
 
 import com.faforever.neroxis.map.SymmetrySettings;
+import org.jspecify.annotations.Nullable;
 
 import java.util.concurrent.atomic.AtomicInteger;
 
@@ -11,11 +12,11 @@ public abstract sealed class ComparableMask<T extends Comparable<T>, U extends C
 
     private final AtomicInteger toBooleanCounter = new AtomicInteger();
 
-    protected ComparableMask(int size, Long seed, SymmetrySettings symmetrySettings, String name) {
+    protected ComparableMask(int size, @Nullable Long seed, SymmetrySettings symmetrySettings, @Nullable String name) {
         super(size, seed, symmetrySettings, name);
     }
 
-    protected ComparableMask(U other, String name) {
+    protected ComparableMask(U other, @Nullable String name) {
         super(other, name);
     }
 
@@ -105,7 +106,7 @@ public abstract sealed class ComparableMask<T extends Comparable<T>, U extends C
     public U max(U other) {
         assertCompatibleMask(other);
         return enqueue(dependencies -> {
-            U source = (U) dependencies.get(0);
+            U source = (U) dependencies.getFirst();
             set((x, y) -> {
                 T thisVal = get(x, y);
                 T otherVal = source.get(x, y);
@@ -124,7 +125,7 @@ public abstract sealed class ComparableMask<T extends Comparable<T>, U extends C
     public U clampMax(BooleanMask other, T val) {
         assertCompatibleMask(other);
         return enqueue(dependencies -> {
-            BooleanMask source = (BooleanMask) dependencies.get(0);
+            BooleanMask source = (BooleanMask) dependencies.getFirst();
             set((x, y) -> {
                 T thisVal = get(x, y);
                 return source.getPrimitive(x, y) ? (thisVal.compareTo(val) < 0 ? val : thisVal) : thisVal;
@@ -155,7 +156,7 @@ public abstract sealed class ComparableMask<T extends Comparable<T>, U extends C
     public U min(U other) {
         assertCompatibleMask(other);
         return enqueue(dependencies -> {
-            U source = (U) dependencies.get(0);
+            U source = (U) dependencies.getFirst();
             set((x, y) -> {
                 T thisVal = get(x, y);
                 T otherVal = source.get(x, y);
@@ -174,7 +175,7 @@ public abstract sealed class ComparableMask<T extends Comparable<T>, U extends C
     public U clampMin(BooleanMask other, T val) {
         assertCompatibleMask(other);
         return enqueue(dependencies -> {
-            BooleanMask source = (BooleanMask) dependencies.get(0);
+            BooleanMask source = (BooleanMask) dependencies.getFirst();
             set((x, y) -> {
                 T thisVal = get(x, y);
                 return source.getPrimitive(x, y) ? (thisVal.compareTo(val) > 0 ? val : thisVal) : thisVal;
